--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ Rplots.pdf
 
 manuscripts/thesis/index.docx
 manuscripts/thesis/feedback/
+manuscripts/thesis/forms/
 manuscripts/child-documents/scratch/
 manuscripts/supplement/scratch/
